Fix form update bug caused by wrapping table in a div, use overflow-x: auto

--- a/PointsBoard/points/static/points/styles/board.css
+++ b/PointsBoard/points/static/points/styles/board.css
@@ -11,7 +11,7 @@
 
 #boardcontainer {
 	width: 100%;
-	overflow-x: scroll;
+	overflow-x: auto;
 	clear: both;
 }
 
